2001-02-13  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* lib/NewStablePtr.hs.in: Adaptation layer for StablePtr for the
	legacy FFI interface

2001-02-12  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* lib/C2HS.hs: Forgot to export `FunPtr' and associated functions

	* lib/C2HSDeprecated.hs: Some exports had been missing

	* c/CTrav.hs: Handle `CAttrs.BuiltinCO'

	* c/CNames.hs (nameAnalysis): add builtin type definitions

	* c/CBuiltin.hs: predefine `__builtin_va_list' as a
	typedef'd name

	* c/CParser.hs (parseCHeader): use `CBuiltin'

	* toplevel/Version.hs (versnum): 0.8.2

2001-02-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* releasing version 0.8.1 "Gentle Moon"
	* ../doc/c2hs/: Documentation updated & added the Haskell FFI
	Marshalling Library specification

2001-02-09  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* lib/Makefile: Debugging for 4.11

2001-02-05  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/C2HSConfig.hs.in: Moved the primitive characteristics
	table to `CInfo' (it is based now on getting the information from
	the FFI of the Haskell compiler compiling c2hs)

	* gen/CInfo.hs: Added

2001-02-04  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* lib/C2HSMarsh.hs: Moved almost everything to `C2HSDeprecated'

	* lib/C2HSBase.hs: Much simplified conversion routines and the old
	`Storable' definition died

2001-02-03  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* configure.in: Removed all the stuff that had to be there for the
	late `lib/C2HSConfig.hs.in'

	* lib/C2HSConfig.hs.in: RIP - All the relevant information is now
	available from the Standard FFI

	* C2HSDeprecated.hs: Added old C type names

	* lib/C2HS.hs: Added support for the New FFI Libraries (so that
	they are also useable with Haskell systems only supporting the old
	libraries)

2000-08-22  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* lib/C2HSDeprecated.hs: contains a compatibility interface to the