@@ -4,11 +4,11 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: Version.hs,v 1.34 2001/02/12 06:34:40 chak Exp $"
+idstr      = "$Id: Version.hs,v 1.35 2001/02/19 04:33:13 chak Exp $"
 name       = "C->Haskell Compiler"
-versnum    = "0.8.2"
+versnum    = "0.8.3"
 versnick   = "\"Gentle Moon\""
-date	   = "12 Feb 2000"
+date	   = "19 Feb 2000"
 version    = name ++ ", version " ++ versnum ++ " " ++ versnick ++ ", " ++ date
 copyright  = "Copyright (c) [1999..2001] Manuel M. T. Chakravarty"
 disclaimer = "This software is distributed under the \
